# library_management

./: .env.simple  Dockerfile  README.md  docker-compose.yml  pyproject.toml
books/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_receipt_status.py  0003_alter_book_language_alter_book_receipt_status_and_more.py  0004_alter_book_serial_number.py  0005_alter_author_description_and_more.py
config/: celery.py  settings.py  urls.py
nginx/: nginx.conf
receipt_book/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
receipt_book/migrations/: 0001_initial.py  0002_alter_receiptbook_period_in_days.py  0003_alter_receiptbook_period_in_days.py  0004_alter_receiptbook_return_date.py  0005_alter_receiptbook_book.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_admin_group_and_user.py
users/migrations/: 0001_initial.py
